crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__phono.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "ooh",
                  "type": "text"
                }
              ],
              "raw_text": "ooh",
              "span": {
                "end": 157,
                "start": 154
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "pinb",
                  "type": "text"
                }
              ],
              "raw_text": "&~pinb",
              "span": {
                "end": 164,
                "start": 158
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "k",
                  "type": "text"
                }
              ],
              "raw_text": "&~k",
              "span": {
                "end": 168,
                "start": 165
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "grr",
                  "type": "text"
                }
              ],
              "raw_text": "&~grr",
              "span": {
                "end": 174,
                "start": 169
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
