crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__phonocolon.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 155,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "am",
                  "type": "text"
                }
              ],
              "raw_text": "am",
              "span": {
                "end": 158,
                "start": 156
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "li",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 164,
                      "start": 163
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "ing",
                  "type": "text"
                }
              ],
              "raw_text": "&~li:ing",
              "span": {
                "end": 167,
                "start": 159
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "right",
                  "type": "text"
                }
              ],
              "raw_text": "right",
              "span": {
                "end": 173,
                "start": 168
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "woh",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 180,
                      "start": 179
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "&~woh:",
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "span": {
                "end": 180,
                "start": 174
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "now",
                  "type": "text"
                }
              ],
              "raw_text": "now",
              "span": {
                "end": 188,
                "start": 185
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
